# Heat-Equation-Solver

project01/src/: Makefile  Makefile.am  Makefile.in  build_linear_system_1d.c  build_linear_system_2d.c  function.h  input.c  main.c  output.c  res_norm.c  solve_linear_system.c
project02/: Makefile.am  configure.ac
project02/Document/: Document.tex
project02/coverage/lcov/: index-sort-f.html  index-sort-l.html  index.html  lcov.info
project02/coverage/lcov/src/: build_linear_system_1d.c.func-sort-c.html  build_linear_system_1d.c.func.html  build_linear_system_1d.c.gcov.html  build_linear_system_2d.c.func-sort-c.html  build_linear_system_2d.c.func.html  build_linear_system_2d.c.gcov.html  error_l2.c.func-sort-c.html  error_l2.c.func.html  error_l2.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  initialize.c.func-sort-c.html  initialize.c.func.html  initialize.c.gcov.html  input.c.func-sort-c.html  input.c.func.html  input.c.gcov.html  main.c.func-sort-c.html  main.c.func.html  main.c.gcov.html  output.c.func-sort-c.html  output.c.func.html  output.c.gcov.html  res_norm.c.func-sort-c.html  res_norm.c.func.html  res_norm.c.gcov.html  show_linear_system.c.func-sort-c.html  show_linear_system.c.func.html  show_linear_system.c.gcov.html  solve_linear_system.c.func-sort-c.html  (+2 more)
project02/src/: Makefile  Makefile.am  Makefile.in  error_l2.c  function.h  initialize.c  input.c  laplace.h  main.c  output.c  output.h5  show_linear_system.c  solve_linear_system_PETSC.c
project02/test/: Makefile  Makefile.am  Makefile.in  rng.sh
project02/test/ref/: ref_12g.h5  ref_12j.h5  ref_14g.h5  ref_22g.h5  ref_22j.h5  ref_24g.h5
(+8 files in other folders)
